COde cleanup and additional features added