@@ -1,69 +1,51 @@
 package de.allround.ssr.page;
 
-import de.allround.ssr.WebApplication;
-import de.allround.ssr.annotations.Injected;
 import de.allround.ssr.page.css.Style;
 import de.allround.ssr.page.css.Stylesheet;
 import de.allround.ssr.page.htmx.Component;
 import io.vertx.core.Vertx;
 import io.vertx.core.http.HttpServerRequest;
+import io.vertx.core.http.HttpServerResponse;
 import io.vertx.ext.auth.User;
-import io.vertx.ext.web.*;
+import io.vertx.ext.web.RequestBody;
+import io.vertx.ext.web.Route;
+import io.vertx.ext.web.RoutingContext;
+import io.vertx.ext.web.Session;
 import lombok.AccessLevel;
-import lombok.Data;
 import lombok.Setter;
 import lombok.SneakyThrows;
 import lombok.experimental.Accessors;
+import org.jetbrains.annotations.NotNull;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
 import org.jsoup.parser.Parser;
 
 import java.net.URI;
-import java.util.ArrayList;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
+import java.util.stream.Collectors;
 
-@Data
+@lombok.Data
 @Accessors(fluent = true)
 public abstract class WebPage {
     private final LinkedList<Component<?>> DOM = new LinkedList<>();
-
-    @Injected
-    @Setter(AccessLevel.PRIVATE)
-    protected WebApplication webApplication;
-    @Injected
-    @Setter(AccessLevel.PRIVATE)
-    protected HttpServerRequest request;
-    @Injected
-    @Setter(AccessLevel.PRIVATE)
+    private final Set<String> extensions = new HashSet<>();
+    private final Set<String> extensionNames = new HashSet<>();
+    private final List<Style> styles = new ArrayList<>();
     protected RoutingContext context;
-    @Injected
     @Setter(AccessLevel.PRIVATE)
     protected User user;
-    @Injected
-    @Setter(AccessLevel.PRIVATE)
-    protected Route route;
-    @Injected
     @Setter(AccessLevel.PRIVATE)
     protected Session session;
-    @Injected
     @Setter(AccessLevel.PRIVATE)
-    protected RequestBody body;
-    @Injected
+    protected HttpServerResponse response;
     @Setter(AccessLevel.PRIVATE)
-    protected ParsedHeaderValues parsedHeaderValues;
-    @Injected
+    protected HttpServerRequest request;
     @Setter(AccessLevel.PRIVATE)
-    protected Vertx vertx;
-
-    private final List<Style> styles = new ArrayList<>();
-
-    public WebPage style(Style... styles) {
-        this.styles.addAll(List.of(styles));
-        return this;
-    }
-
+    protected RequestBody requestBody;
+    @Setter(AccessLevel.PRIVATE)
+    protected Route currentRoute;
+    private Vertx vertx;
     private String lang = "de";
     private String title = "Generated Webpage";
     private String template = """
@@ -78,6 +60,34 @@ public abstract class WebPage {
             .replace("%LANG%", lang)
             .replace("%TITLE%", title);
 
+    public WebPage useSSE() {
+        extensions.add("/sse.js");
+        extensionNames.add("sse");
+        return this;
+    }
+
+    public WebPage useRestored() {
+        extensions.add("/sse.js");
+        extensionNames.add("sse");
+        return this;
+    }
+
+    public WebPage context(@NotNull RoutingContext context) {
+        this.context = context;
+        this.user = context.user();
+        this.session = context.session();
+        this.response = context.response();
+        this.request = context.request();
+        this.requestBody = context.body();
+        this.currentRoute = context.currentRoute();
+        return this;
+    }
+
+    public WebPage style(Style... styles) {
+        this.styles.addAll(List.of(styles));
+        return this;
+    }
+
     public abstract void init();
 
     public WebPage add(Component<?>... components) {
@@ -87,17 +97,32 @@ public abstract class WebPage {
         return this;
     }
 
+    public void updateTemplate() {
+        template = template
+                .replace("%LANG%", lang)
+                .replace("%TITLE%", title);
+    }
+
     @SneakyThrows
     public String render() {
         DOM.clear();
         init();
-        List<Stylesheet> stylesheets = new ArrayList<>(DOM.stream().map(component -> new Stylesheet().add(component.styles())).filter(Objects::nonNull).toList());
-
+        updateTemplate();
+        DOM.forEach(component -> component.context(context).vertx(vertx).page(this));
+        List<Stylesheet> stylesheets = DOM.stream().map(Component::stylesheet).collect(Collectors.toList());
+        styles.forEach(style -> stylesheets.add(new Stylesheet().add(style)));
         Document document = Jsoup.parse(template, "", Parser.htmlParser());
-        document.getElementsByTag("head").get(0).appendChildren(stylesheets.stream().map(Stylesheet::toStyleTag).filter(Objects::nonNull).toList()).append(
-                "<script src=\"//" + URI.create(request.absoluteURI()).getAuthority() + "/generated-static/htmx.min.js\"></script>"
+        Element head = document.getElementsByTag("head").get(0);
+        Element body = document.getElementsByTag("body").get(0);
+        head.appendChildren(stylesheets.stream().map(Stylesheet::toStyleTag).filter(Objects::nonNull).toList()).append(
+                "<script src=\"//" + URI.create(context.request().absoluteURI()).getAuthority() + "/htmx/htmx.min.js\" />"
         );
-        document.getElementsByTag("body").get(0).appendChildren(DOM.stream().map(Component::fullRender).filter(Objects::nonNull).toList());
+
+        extensions.forEach(s -> head.append("<script src=\"//" + URI.create(context.request().absoluteURI()).getAuthority() + "/htmx/" + s + "\" />"));
+
+        body.attr("hx-ext", String.join(",", extensionNames));
+
+        body.appendChildren(DOM.stream().map(Component::fullRender).filter(Objects::nonNull).toList());
 
         return document.outerHtml();
     }
